# botex_examples

./: .gitignore  GRIEF_PROFILES_DOCUMENTATION.md  GRIEF_SUPPORT_README.md  README.qmd  botex.sqlite3  grief_profiles.py  litellm_uuid.txt  main.py  notes.qmd  pyproject.toml  run_configured_grief_sessions.py  session_config.py
.github/instructions/: otree.instructions.md
code/: display_botex_prompt_sequence.py  extract_botex_participants.py  extract_botex_rationales.py  parse_sent_amount_answers.py  run_botex_session.py  run_grief_support.py  run_single_botex_bot.py
otree/: settings.py
otree/grief_support/: Checks.html  InitialMessage.html  Introduction.html  Response.html  Results.html  ServiceProvision.html  Thanks.html  __init__.py
otree/stakeholder/: Assessment.html  Background.html  Checks.html  Condition1.html  Condition2.html  Controls.html  Demographics.html  Introduction.html  Strategy.html  Thanks.html  __init__.py
