[project]
name = "botex-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botex>=0.1.0",
    "jupyter>=1.1.1",
    "otree>=5.4.0",
    "psycopg2>=2.8.4",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.2",
    "sentry-sdk==0.7.9",
    "setuptools>=77.0.3",
    "tabulate>=0.9.0",
]
